<resources>
    <string name="app_name">POS Application</string>
    <string name="userID">User ID</string>
    <string name="password">Password</string>
    <string name="passwordHint">Password</string>
    <string name="btn_enter">Enter</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register_user">Register User</string>
    <string name="user_role">User Role</string>
    <string-array name="spinner_role">
        <item>Admin</item>
        <item>Server</item>
        <item>Cook</item>
    </string-array>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="tab_text_1">Modify Users</string>
    <string name="tab_text_2">Access Screens</string>
    <string name="admin_view">Admin View</string>
    <string name="regNewUser">Register New User</string>
    <string name="no_users">No users available</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="switch_screen_txt">Switch Screen</string>
    <string name="btn_database_screen">User Database</string>
    <string name="hello_first_fragment">hello first fragment</string>
    <string name="next">next</string>
    <string name="previous">previous</string>
    <string name="btn_menu_item">Menu Item Database</string>
    <string name="add_menu_item">Add Menu Item</string>
    <string name="menu_item_name">Menu Item Name</string>
    <string name="menu_item_price">Menu Item Price</string>
    <string name="title_activity_cook_screen">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_admin_cook_screen">AdminCookScreen</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>